# langchain-academy

./: pyproject.toml
module-1/: agent.ipynb  chain.ipynb  deployment.ipynb  router.ipynb  simple-graph.ipynb
module-1/studio/: agent.py  chain.py  langgraph.json  llm_util.py  router.py
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
